--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -55,6 +55,17 @@
           "isDefault": true
         },
         "problemMatcher": []
+      },
+      {
+        "label": "program02e",
+        "type": "shell",
+        "command": "g++",
+        "args": ["-std=c++20", "-Wall", "-fopenmp", "-o", "prog", "02/main3.cpp"],
+        "group": {
+          "kind": "build",
+          "isDefault": true
+        },
+        "problemMatcher": []
       }
     ]
   }
