--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,10 @@
         "ctime": "cpp",
         "ratio": "cpp",
         "iomanip": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "ranges": "cpp",
+        "stop_token": "cpp"
     }
 }
